--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>Servlet_Email</servlet-name>
         <servlet-class>controlador.Servlet_Email</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Servlet_usuario_Editar</servlet-name>
+        <servlet-class>controlador.Servlet_usuario_Editar</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Servlet_index</servlet-name>
         <url-pattern>/servlet_index</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>Servlet_Email</servlet-name>
         <url-pattern>/servlet_Email</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Servlet_usuario_Editar</servlet-name>
+        <url-pattern>/servlet_usuario_Editar</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
