se agrego el modulo de solicitud casi completo, con notificacion de correo

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <servlet-name>Servlet_usuario_Editar</servlet-name>
         <servlet-class>controlador.Servlet_usuario_Editar</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Servlet_servicio</servlet-name>
+        <servlet-class>controlador.Servlet_servicio</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Servlet_index</servlet-name>
         <url-pattern>/servlet_index</url-pattern>
@@ -31,6 +35,10 @@
     <servlet-mapping>
         <servlet-name>Servlet_usuario_Editar</servlet-name>
         <url-pattern>/servlet_usuario_Editar</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Servlet_servicio</servlet-name>
+        <url-pattern>/servlet_servicio</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
